# Haskell-Dumps

./: .envrc  .gitignore  README.norg  cabal.project  flake.nix  fourmolu.yaml  justfile  nvfetcher.toml  tags
.vectorcode/: config.json
cement/: cement.cabal
inDepth/: inDepth.cabal  justfile
inDepth/src/: CH1.hs  CH2.hs  CH3.hs  CH4.hs  CH5.hs  CH6.hs  Main.hs
inDepth/tests/: Turns_spec.hs
optic-book/: README.norg  optic-book.cabal
optic-book/src/: CH1.hs  CH2.hs  CH2.hsc  CH3.hs  Main.hs  Templates.hs
pinephonedriver/: pinephonedriver.cabal
src/: main.hs  testing.cabal
src/lib/: Excercises.hs  ExcercisesTre.hs  ExcercisesUn.hs
src/test/: Spec.hs
testing/: testing.cabal
testing/lib/: ExcercisesDuo.hs  ExcercisesTre.hs  OpticsPrism.hs  Template.hs
thoughtdump/: justfile  thoughtdump.cabal  thoughtdumps.hp  thoughtdumps.prof
thoughtdump/src/: Applicatives.hs  DoPure.hs  ExcercisesDuo.hs  ExcercisesTre.hs  ExcercisesUn.hs  FFI.hs  Heap.hs  Main.hs  OpticsPrism.hs  SIMD.hs  TTT.hs  Template.hs  Traversable.hs  Tree.hs
thoughtdump/test/: OpticalSpec.hs
