cabal-version: 3.0
name: inDepth
synopsis: Haskell Docs From `Haskell_in_depth`
version: 1.0.0
maintainer: compacthermitian@proton.me
author: Compact Hermit
description:
  Following the book `Haskell in Depth` by Chris Penner

build-type: Simple

flag develop
  description: Use Dev Environment
  default: False
  manual: True

common shared
  default-extensions:
    DataKinds
    DerivingVia
    GADTs
    TemplateHaskell
    TypeApplications
    TypeFamilies

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -fwrite-ide-info
    -hiedir=.hie
    -fprint-explicit-foralls
    -fprint-explicit-kinds
    -Wall
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wunused-packages
    -Wno-name-shadowing
    -Wno-unused-do-bind
    -Wno-unused-imports
    -Wunused-foralls
    -Wunused-packages
    -Wno-unused-binds
    -Wno-unused-local-binds
    -Wno-gadt-mono-local-binds
    -Wno-unused-matches
    -Wno-missing-signatures
    -Wno-partial-type-signatures

  build-depends:
    aeson,
    async,
    base,
    containers,
    lens,
    optics,
    template-haskell,
    text,
    sequence

library
  import: shared
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    CH1
    CH2
    CH3
    CH4
    CH5
    CH6
    Main
