cabal-version: 3.0
name: inDepth
synopsis: Haskell Docs From `Haskell_in_depth`
version: 1.0.0
maintainer: compacthermitian@proton.me
author: Compact Hermit
description:
  Following the book `Haskell in Depth` by Chris Penner

build-type: Simple

flag develop
  description: Use Dev Environment
  default: False
  manual: True

common shared
  default-language: Haskell2010
  default-extensions:
    DataKinds
    DerivingVia
    GADTs
    TemplateHaskell
    TypeApplications
    TypeFamilies

  ghc-options:
    -threaded
    -- -prof
    -with-rtsopts=-N
    -fwrite-ide-info
    -hiedir=.hie
    -- -fplugin-opt=GHC.Plugin.OllamaHoles:backend=openai
    -- -fplugin-opt=GHC.Plugin.OllamaHoles:open_ai_base_url=http://127.0.0.1:7000
    -- -fplugin-opt=GHC.Plugin.OllamaHoles:model=agentica-org_deepcoder-14b-preview
    -- -fplugin-opt=GHC.Plugin.OllamaHoles:debug
    -fprint-explicit-foralls
    -fprint-explicit-kinds
    -Wall
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wunused-packages
    -Wno-name-shadowing
    -Wunused-foralls
    -Wunused-packages
    -Wno-unused-binds
    -Wno-unused-local-binds
    -Wno-gadt-mono-local-binds
    -Wno-unused-matches
    -Wno-missing-signatures

  build-depends:
    aeson,
    random ==1.2.*,
    async,
    base,
    containers,
    lens,
    optics,
    template-haskell,
    text,
    fmt,
    -- ollama-holes-plugin,
    sequence

executable Turns
    main-is: CH2.hs
    hs-source-dirs: src
    import: shared
    build-depends:
        base,
        containers,
        lens,
        optics,
        template-haskell,
        text,
        fmt,
        random

test-suite all-tests
    import: shared
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: tests
    other-modules:
       Turns_spec
    build-depends:
        hedgehog,
        hspec,
        hspec-contrib,
        hspec-hedgehog,
        inDepth

-- library radar-lib
--   import: shared
--   exposed-modules:
--     CH2
--   hs-source-dirs: src
--   default-language: Haskell2010

library
  import: shared
  hs-source-dirs: src
  exposed-modules:
    CH1
    CH2
    CH3
    CH4
    CH5
    CH6
    Main
