cabal-version: 3.0
name: OpticsBool
synopsis: Haskell-Idea Dumps
version: 1.0.0
maintainer: compacthermitian@proton.me
author: Compact Hermit
description:
  Following the book `Optics By Example` by Chris Penner

build-type: Simple

flag develop
  description: Use Dev Environment
  default: False
  manual: True

common shared
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -fwrite-ide-info
    -hiedir=.hie
    -fprint-explicit-foralls
    -fprint-explicit-kinds
    -Wall
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wunused-packages
    -Wno-name-shadowing
    -Wno-unused-do-bind
    -Wno-unused-imports
    -Wunused-foralls
    -Wunused-packages
    -Wno-unused-binds
    -Wno-unused-local-binds
    -Wno-gadt-mono-local-binds
    -Wno-unused-matches
    -Wno-missing-signatures
    -Wno-partial-type-signatures

  build-depends:
    aeson,
    async,
    base,
    lens,
    optics,
    template-haskell,
    template-haskell-optics,

library
  import: shared
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Main
    Templates

-- test-suite sanity-check
--   import: shared
--   type: exitcode-stdio-1.0
--   main-is: Spec.hs
--   hs-source-dirs: test
--
--
--   build-depends:
--     hedgehog,
--     hspec,
--     hspec-contrib,
--     hspec-hedgehog,
--     thoughtdump,
