cabal-version: 3.0
name: PinePhoneDriver
synopsis: Haskell-Idea Dumps
version: 1.0.0
maintainer: compacthermitian@proton.me
author: Compact Hermit
description:
  PinePhone Driver written in rust

build-type: Simple

flag develop
  description: Use Dev Environment
  default: False
  manual: True

common shared
  default-extensions:
    DataKinds
    GADTs
    TemplateHaskell
    TypeApplications
    TypeFamilies

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -fwrite-ide-info
    -hiedir=.hie
    -fprint-explicit-foralls
    -fprint-explicit-kinds
    -Wall

  build-depends:
    aeson,
    async,
    base,
    containers,
    lens,
    lens-aeson,
    mtl,
    optics,
    polysemy,
    template-haskell,
    template-haskell-optics,
    text,
