cabal-version: 3.0
name:          thought-dumps
synopsis:      Haskell-Idea Dumps
version:       1.0.0
maintainer:    compacthermitian@proton.me
author:        Compact Hermit
description:
    Thought dumps from working through books, as well as excercises, from `Thinking With Types` by Sandy McGuire

build-type:    Simple

flag develop
    description: Use Dev Environment
    default:     False
    manual:      True

common shared
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N -fplugin=LiquidHaskellBoot
        -fwrite-ide-info -hiedir=.hie -Wmissing-deriving-strategies
        -Wunused-foralls -fprint-explicit-foralls -fprint-explicit-kinds
        -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
        -Wunused-packages -Wno-name-shadowing -Wno-unused-do-bind
        -Wno-unused-imports -Wno-unused-binds -Wno-unused-local-binds
        -Wno-gadt-mono-local-binds -Wno-unused-matches
        -Wno-missing-signatures -Wno-partial-type-signatures

    build-depends:
        , aeson
        , async
        , base
        , liquidhaskell
        , liquidhaskell-boot
        , optics
        , template-haskell-optics
        , template-haskell

library
    import:           shared
    exposed-modules:
        ExcercisesDuo
        ExcercisesTre
        ExcercisesUn
        OpticsPrism
        Template
        TTT

    hs-source-dirs:   lib
    default-language: Haskell2010

executable testing
    import:         shared
    hs-source-dirs: .
    main-is:        main.hs
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N -fwrite-ide-info -hiedir=.hie

test-suite test
    import:         shared
    type:           exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:        Spec.hs
    build-depends:
        , base
        , hspec
        , relude
