cabal-version: 3.0
name: thoughtdump
synopsis: Haskell-Idea Dumps
version: 1.0.0
maintainer: compacthermitian@proton.me
author: Compact Hermit
description:
  Thought dumps from working through books, as well as excercises, from `Thinking With Types` by Sandy McGuire

build-type: Simple

flag develop
  description: Use Dev Environment
  default: False
  manual: True

common shared
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -- -fwrite-ide-info
    -- -hiedir=.hie
    -Wunused-foralls
    -fprint-explicit-foralls
    -fprint-explicit-kinds
    -Wall
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wunused-packages
    -Wno-name-shadowing
    -Wno-unused-do-bind
    -Wno-unused-imports
    -Wunused-packages
    -Wno-unused-binds
    -Wno-unused-local-binds
    -Wno-gadt-mono-local-binds
    -Wno-unused-matches
    -Wno-missing-signatures
    -Wno-partial-type-signatures

  build-depends:
    aeson,
    async,
    base,
    --ghc,
    text,
    lens,
    --liquidhaskell,
    --liquidhaskell-boot,
    optics-core,
    template-haskell,
    template-haskell-optics,

library
  import: shared
  exposed-modules:
    Applicatives
    DoPure
    ExcercisesDuo
    ExcercisesTre
    ExcercisesUn
    FFI
    Heap
    Main
    OpticsPrism
    SIMD
    TTT
    Template
    Traversable
    Tree

  hs-source-dirs: src
  default-language: Haskell2010

executable thoughtdumps
  import: shared
  hs-source-dirs: lib/
  main-is: Main.hs
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -fwrite-ide-info
    -hiedir=.hie

test-suite sanity-check
  import: shared
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules:
    OpticalSpec

  build-depends:
    hedgehog,
    hspec,
    hspec-contrib,
    hspec-hedgehog,
    thoughtdump,
